erDiagram
    PLAYER_DIMENSION {
      player_id int PK
      name       string
      position   string
      team       string
    }
    PERFORMANCE_DIMENSION {
      performance_id   int PK
      passes           int
      pass_accuracy    float
      shots            int
      shots_on_target  int
      saves            int
    }
    DISCIPLINE_DIMENSION {
      discipline_id    int PK
      fouls            int
      yellow_cards     int
      red_cards        int
    }
    VALUE_DIMENSION {
      value_id            int PK
      market_value_usd    float
      exchange_rate       float
      market_value_ars    float
    }
    DATE_DIMENSION {
      date_id      int PK
      date         date
      day_of_week  string
      month        string
      year         int
    }
    MATCH_DIMENSION {
      match_id     int PK
      date_id      int FK
      opponent     string
      competition  string
      home_away    string
    }
    FACT_PLAYER_PERFORMANCE {
      fact_id           int PK
      player_id         int FK
      performance_id    int FK
      discipline_id     int FK
      value_id          int FK
      date_id           int FK
      composite_score   float
      ranking           int
    }
    PLAYER_MATCH_FACT {
      fact_id           int PK
      match_id          int FK
      player_id         int FK
      minutes_played    int
      goals             int
      assists           int
      passes            int
      shots_on_target   int
    }

    FACT_PLAYER_PERFORMANCE ||--|| PLAYER_DIMENSION      : "player_id → player_id"
    FACT_PLAYER_PERFORMANCE ||--|| PERFORMANCE_DIMENSION : "performance_id → performance_id"
    FACT_PLAYER_PERFORMANCE ||--|| DISCIPLINE_DIMENSION  : "discipline_id → discipline_id"
    FACT_PLAYER_PERFORMANCE ||--|| VALUE_DIMENSION       : "value_id → value_id"
    FACT_PLAYER_PERFORMANCE ||--|| DATE_DIMENSION        : "date_id → date_id"

    MATCH_DIMENSION ||--|| DATE_DIMENSION              : "date_id → date_id"
    PLAYER_MATCH_FACT ||--|| MATCH_DIMENSION           : "match_id → match_id"
    PLAYER_MATCH_FACT ||--|| PLAYER_DIMENSION          : "player_id → player_id"
